Switch `AutoFileName` to Git Submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "Packages/Color Scheme - Daylerees"]
 	path = Packages/Color Scheme - Daylerees
 	url = https://github.com/daylerees/colour-schemes
+[submodule "Packages/AutoFileName"]
+	path = Packages/AutoFileName
+	url = https://github.com/BoundInCode/AutoFileName
