Switch `Tag` to Git Submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "Packages/AutoFileName"]
 	path = Packages/AutoFileName
 	url = https://github.com/BoundInCode/AutoFileName
+[submodule "Packages/Tag"]
+	path = Packages/Tag
+	url = https://github.com/SublimeText/Tag
