Add some packages that I've been using lately.

--- a/Packages/.gitignore
+++ b/Packages/.gitignore
@@ -1,10 +1,15 @@
 # Don't track Package Control Packages
 /Alignment/
+/LiveReload/
+/Modific/
 /Nettuts+ Fetch/
 /Package Control/
 /PHP-Twig/
 /Puppet/
+/Razor/
+/Sass/
 /VBScript/
+/Wrap Plus/
 
 # PyV8 Package is controlled by Emmet
 /PyV8/
